--- a/index.html
+++ b/index.html
@@ -242,10 +242,8 @@ p{ margin:10px auto}
 <p><span class="style11"> I co-authored/co-led several national and international projects, including UK EPSRC, Innovate UK, 
 	EU Horizon 2020, UK Alan Turing Institute Research Grants, China 973/863/Key R&D Programme, etc., worth more than £8 million over 
 	the last five years. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
-	Alibaba and Beihang University. I developed strong links with China-UK Computer 
-	Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, 
-	Lancaster University, Newcastle University upon Tyne, etc.).  I was on the program committees of many conferences, 
-	including IJCAI, ECAI, AAAI, CLOUD, etc., and was also the program/area chair of multiple conferences. 
+	Alibaba and Beihang University. I am currently acting as an associate editor of ACM Computing Surveys, and on the program committees of many conferences, 
+	including IJCAI, ECAI, AAAI, CLOUD, etc., I was also the program/area chair of multiple conferences. 
 </span>
 
 <p><span class="style11"> My official bio in Chinese maintained by Beihang University can be found here <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm">中文简介</a>
@@ -445,6 +443,8 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <div id="div_services">
 <p><span class="Bolder"><!--img src="icons/service-banner.png" width="22" height="25" border="0"/--> Selected Professional Services </span></p>
+
+<p><span class="style11">&bull; Associate Editor of ACM Computing Surveys (CSUR) </span></p>
 
 <p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed)</span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
