--- a/publications.html
+++ b/publications.html
@@ -155,7 +155,7 @@ p{ margin:10px auto}
 <a href="paper/secon2022.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC)
+<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM SC 2022
  <a href="paper/sc2022.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
@@ -187,7 +187,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; Y. Hei', R. Yang', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS) (IF=14.26) <a href="paper/tnnls2021-hawk.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID) <a href="paper/ccgrid2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  </span></p>
+<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM CCGRID 2021 <a href="paper/ccgrid2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  </span></p>
 
 <p><span class="style11">&bull; Y. Song, T. Wo, R. Yang*, Q. Shen and J. Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC)  <a href="paper/jpdc2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
@@ -265,24 +265,10 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 </span></p>
 
 
-<p lang="en-US"> <span class="blue">2018 </span></p>
-
-<p><span class="style11">  &bull; P. Garraghan, R. Yang*, Z. Wen, A. Romanovsky, J. Xu, R. Buyya, R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
-</span></p>
-
-<p><span class="style11">  &bull; X. Sun, C. Hu, R. Yang*, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li. ROSE: Cluster Resource Scheduling via Speculative Over-subscription. in the 38th IEEE ICDCS 2018 <a href="paper/icdcs2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
-</span></p>
-
-<p><span class="style11">  &bull; R. Yang, X. Ouyang, Y. Chen, P. Townend, J. Xu. Intelligent Resource Scheduling: a Machine Learning Perspective. in the 12th IEEE SOSE 2018, <a href="paper/sose2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>       
-</span></p>
-
-<p><span class="style11">  &bull; Y. Zhang, M. Zhang, T. Wo, X. Lin, R. Yang, J. Xu. A Scalable lnternet-of-Vehicles Service over Joint Clouds. in the 9th IEEE JCC 2018 <a href="paper/jcc2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
-</span></p>
-
-<p><span class="style11">  &bull; R. Yang, Z. Zhao, J. Ouyang, J. Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
 
 
-<p lang="en-US"> <span class="blue">2017 and Before </span></p>
+
+<p lang="en-US"> <span class="blue">2018 and Before </span></p>
 
 <p><span class="style11">  &bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
@@ -291,14 +277,16 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <a href="paper/tsc2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-<p><span class="style11">  &bull; Z. Wen, R. Yang*, P. Garraghan, T.Lin, J. Xu and M. Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> <span class="red">(Highly Cited Paper)</span>
+<p><span class="style11">  &bull; X. Sun, C. Hu, R. Yang*, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li. ROSE: Cluster Resource Scheduling via Speculative Over-subscription. in the 38th IEEE ICDCS 2018 <a href="paper/icdcs2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
 <p><span class="style11">  &bull; X. Sun, C. Hu, R. Yang*, P. Garraghan, C. Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP, 2017 (poster) <a href="paper/sosp2017-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
-<p><span class="style11">  &bull; T. Wo, R. Yang, Y. Wang, C. Hu and J. Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
-<a href="paper/ccfcomm2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+<p><span class="style11">  &bull; Z. Wen, R. Yang*, P. Garraghan, T.Lin, J. Xu and M. Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> <span class="red">(Highly Cited Paper)</span>
+</span></p>
+
+<p><span class="style11">  &bull; P. Garraghan, R. Yang*, Z. Wen, A. Romanovsky, J. Xu, R. Buyya, R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
 <p><span class="style11">  &bull; Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang, J. Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014 <a href="paper/vldb2014.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
@@ -307,7 +295,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; X. Ouyang, P. Garraghan, R. Yang, P. Townend, and J. Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
-<p><span class="style11">  &bull; L. Cui, J. Li, T. Wo, B. Li, R. Yang, Y. Cao, J. Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+<p><span class="style11">  &bull; R. Yang, X. Ouyang, Y. Chen, P. Townend, J. Xu. Intelligent Resource Scheduling: a Machine Learning Perspective. in the 12th IEEE SOSE 2018, <a href="paper/sose2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>       
 </span></p>
 
 <p><span class="style11">  &bull; R. Yang and J. Xu. Computing at Massive Scale: Scalability and Dependability Challenges, in the 10th IEEE International Symposium on Service Oriented System Engineering (SOSE 2016) <a href="paper/sose2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -316,7 +304,21 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; R. Yang, J. Ouyang, C. Hu. Fail at Scale. Communications of CCF, 2016 (In Chinese) <a href="paper/ccfcomm2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
+<p><span class="style11">  &bull; T. Wo, R. Yang, Y. Wang, C. Hu and J. Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
+<a href="paper/ccfcomm2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+</span></p>
+
+
+
 <p><span class="style11">  &bull; R. Yang, T. Wo, C. Hu, J. Xu and M. Zhang. D2PS : a Dependable Data Provisioning Service in Multi-tenants Cloud Environment. in the 17th IEEE HASE 2016 <a href="paper/hase2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+</span></p>
+
+<p><span class="style11">  &bull; R. Yang, Z. Zhao, J. Ouyang, J. Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
+
+<p><span class="style11">  &bull; L. Cui, J. Li, T. Wo, B. Li, R. Yang, Y. Cao, J. Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+</span></p>
+
+<p><span class="style11">  &bull; Y. Zhang, M. Zhang, T. Wo, X. Lin, R. Yang, J. Xu. A Scalable lnternet-of-Vehicles Service over Joint Clouds. in the 9th IEEE JCC 2018 <a href="paper/jcc2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
 <p><span class="style11">  &bull; L. Du, T. Wo, R. Yang*, C. Hu. Cider: a Rapid Docker Container Deployment System through Sharing Network Storage. in the 19th IEEE HPCC 2017
