--- a/publications_topics.html
+++ b/publications_topics.html
@@ -136,7 +136,7 @@ p{ margin:10px auto}
 <a href="paper/secon2022.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
+<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM SC 2022
 <a href="paper/sc2022.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
@@ -166,7 +166,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 </span></p>
 
 
-<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), 2021 <a href="paper/ccgrid2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  </span></p>
+<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM CCGRID 2021 <a href="paper/ccgrid2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  </span></p>
 
 
 <p><span class="style11">&bull; R. Yang, Z. Wen, D. McKee, T. Lin, J. Xu and P. Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
