--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
+<p><span class="style11"> (20/11/2024) I will serve as Associate Editor of CCF Computer Engineering and Design Journal for the next 4 years! </span></p>
 <p><span class="style11"> (26/09/2024) A new approach to defense attacks to LLM serving has been accepted by, and will be presented in the poster session of ACM SOSP 2024.  </span></p>
 
 <p><span class="style11"> (26/09/2024) Our work on Elastic GPU Scheduling for Online DL Model Training is accepted by ACM SoCC 2024. Big Congrats to Ziyang, Weihan and Tianyu!  </span></p>
@@ -242,8 +243,8 @@ p{ margin:10px auto}
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
 	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
-	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
-	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
+	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established). 
+	I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
 	Alibaba and Beihang University. 
 </span>
 
@@ -369,27 +370,28 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11"> <strong> Ongoing </strong> </span></p>
 
-<p><span class="style11">&bull; Effective Scheduling for Multi-tenant AI Clusters (¥0.3M), funded by National Natural Science Foundation of China, PI, 2025-2027 </span></p> 
+<p><span class="style11">&bull; Effective Scheduling for Multi-tenant AI Clusters (¥300K), funded by National Natural Science Foundation of China, PI, 2025-2027 </span></p> 
 
-<p><span class="style11">&bull; Time Series Anomaly Detection for Managing Data and Devices in Production Process at Scale (¥0.3M), funded by Beijing Natural Science Foundation, PI, 2025-2027 </span></p> 
+<p><span class="style11">&bull; Time Series Anomaly Detection for Managing Data and Devices in Production Process at Scale (¥300K), funded by Beijing Natural Science Foundation, PI, 2025-2027 </span></p> 
 
 <p><span class="style11">&bull; Enabling Generic LLMs on PaddlePaddle and AI Chips (¥6.4M), funded by Beijing Municipal S&T Commission and Baidu Inc., Co-I, 2024-2025 </span></p> 
 
-<p><span class="style11">&bull; Enhancing Model Training and Inference (¥0.5M), funded by Company X's Research Programme, PI, 2024 - 2025  </span></p> 
+<p><span class="style11">&bull; Enhancing Model Training and Inference (¥500K), funded by Kuaishou Research Funding, PI, 2024 - 2025  </span></p> 
 
-<p><span class="style11">&bull; LLMs-Assisted Information Retrieval Platform (¥0.2M), funded by CAE, PI, 2024  </span></p> 
+<p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
-<p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥0.2M), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
-
-
-<p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
+<p><span class="style11">&bull; Multi-Modal Learning for Device Defect Detection in Extreme Conditions (¥200K), funded by University Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
 <p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by National Key Research and Development Programme, Co-author and Key Member, 2024 - 2026  </span></p> 
 
-<p><span class="style11">&bull; Making Model Training More Reliable in Large-Scale AI Clusters (¥0.4M), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
+<p><span class="style11">&bull; Making Model Training More Reliable in Large-Scale AI Clusters (¥400K), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
 
 
 <p><span class="style11"> <strong> Completed </strong> </span></p>
+
+<p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
+
+<p><span class="style11">&bull; LLMs-Assisted Information Retrieval Platform (¥200K), funded by CAE, PI, 2024  </span></p> 
 
 <p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
 
@@ -460,8 +462,8 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), Spring 2024 </span></p>
 <p><span class="style11">&bull; Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024 </span></p>
 <p><span class="style11">&bull; Foudations of Software Engineering (Undergraduate Level, BeihangU), Spring 2024 </span></p>
-<p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023/2024 </span></p>
-<p><span class="style11">&bull; Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), <a href="http://www.xuwang.tech/course/sc2023fall/main.html">Autumn 2023</a>, Autumn 2024</span></p> 
+<p><span class="style11">&bull; Research Methodology and Training (Undergraduate Level, BeihangU), Autumn 2023/2024 </span></p>
+<p><span class="style11">&bull; Services Computing (Graduate Level, BeihangU), <a href="http://www.xuwang.tech/course/sc2023fall/main.html">Autumn 2023</a>, Autumn 2024</span></p> 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022 </span></p> 
 <p><span class="style11">&bull; Essentials of Cloud Computing (CS61839, Graduate Level, BeihangU, with Prof. Chunming Hu), Spring 2017</span></p> 
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html" style="text-decoration: none">~$ talks</a> </span></p>
@@ -473,12 +475,12 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="Bolder"><!--img src="icons/service-banner.png" width="22" height="25" border="0"/--> Selected Professional Services </span></p>
 
 <p><span class="style11">&bull; Associate Editor of ACM Computing Surveys (CSUR) </span></p>
-
+<p><span class="style11">&bull; Associate Editor of CCF Computer Engineering and Design Journal </span></p>
 <p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed)</span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
 <p><span class="style11">&bull; Review Editor@Editorial Board: Frontiers in Big Data, Frontiers in High Performance Computing  </span></p>
 
-<p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
+<p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC), 2025, 2020, 2019 </span></p>
 
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
@@ -490,6 +492,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/award-banner.png" width="25" height="25" border="0"/-->Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
+<p><span class="style11">&bull;	  <strong>China National *** Youth Fellowship</strong>, 2024 </p>
 <p><span class="style11">&bull;	  <strong>Best Paper Award</strong> of IEEE Joint Cloud Conference (JCC), 2024 </p>
 
 <p><span class="style11">&bull;	  <strong>UK Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
@@ -511,7 +514,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <div id="div_misc">
 <p><span class="Bolder"><!--img src="icons/misc-banner.png" width="25" height="25" border="0"/--> Misc</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
-<p><span class="style11"> Outside of work, I really enjoy  <img src="icons/running.png" width="15" height="15" border="0"/> long-distance running, <img src="icons/calligraphy.png" width="15" height="15" border="0"/> traditional chinese calligraphy, <img src="icons/architecture.png" width="15" height="15" border="0"/> architectural design, <img src="icons/cooking.png" width="15" height="15" border="0"/> cooking world wide foods, and <img src="icons/music.png" width="15" height="15" border="0"/> music.
+<p><span class="style11"> Outside of work, I am a super fan of football and really enjoy <img src="icons/running.png" width="15" height="15" border="0"/> long-distance running, <img src="icons/calligraphy.png" width="15" height="15" border="0"/> traditional chinese calligraphy, <img src="icons/architecture.png" width="15" height="15" border="0"/> architectural design, <img src="icons/cooking.png" width="15" height="15" border="0"/> cooking world wide foods, and <img src="icons/music.png" width="15" height="15" border="0"/> pop music.
 </span></p>
 </div>
 
@@ -534,7 +537,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">Updated by Aug. 2024</span></p>
+<p><span class="style11">Updated by Nov. 2024</span></p>
 <p><span class="style11"><img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />&nbsp;&nbsp;<img src="images/QRcode.png" width="50" alt="QRCode" border="0" title="Beihang Homepage" /></span></p>
 
  
