--- a/services.html
+++ b/services.html
@@ -102,6 +102,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"><strong> (Co-) Chair/Editor:</strong></span></p>
 <p><span class="style11">&bull; Associate Editor of ACM Computing Surveys (CSUR), 2024-present </span></p>
+<p><span class="style11">&bull; Associate Editor of CCF Computer Engineering and Design Journal, 2024-present </span></p>
 <p><span class="style11">&bull; Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal, 2021.10 - present </span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690)
 <p><span class="style11">&bull;  Review Editor on the Editorial Board of Frontiers in Big Data, 2021.12 - present </span></p>
