--- a/index.html
+++ b/index.html
@@ -197,8 +197,9 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">14 October 2024</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) New 36-month project awarded (PI) by National Key Research and Development Programme. PhD Students and Postdocs post will open soon! </span> Drop me an email if you are interested... </span></p>
 
+<p><span class="style11"> 
 <p><span class="style11"> (20/11/2024) I will serve as Associate Editor of CCF Computer Engineering and Design Journal for the next 4 years! </span></p>
 <p><span class="style11"> (26/09/2024) A new approach to defense attacks to LLM serving has been accepted by, and will be presented in the poster session of ACM SOSP 2024.  </span></p>
 
@@ -370,6 +371,10 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11"> <strong> Ongoing </strong> </span></p>
 
+<p><span class="style11">&bull; Towards Building, Assessing and Evolving Cloud Native Applications (¥5M), funded by National Key Research and Development Programme (2024YFB4505901), PI, 2025-2027 </span></p> 
+
+<p><span class="style11">&bull; Heterogeneity-aware Scheduling for Deep Recommendation Models  (¥500K), funded by Huawei Research Fund, PI, 2025-2026 </span></p> 
+
 <p><span class="style11">&bull; Effective Scheduling for Multi-tenant AI Clusters (¥300K), funded by National Natural Science Foundation of China, PI, 2025-2027 </span></p> 
 
 <p><span class="style11">&bull; Time Series Anomaly Detection for Managing Data and Devices in Production Process at Scale (¥300K), funded by Beijing Natural Science Foundation, PI, 2025-2027 </span></p> 
@@ -384,7 +389,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by National Key Research and Development Programme, Co-author and Key Member, 2024 - 2026  </span></p> 
 
-<p><span class="style11">&bull; Making Model Training More Reliable in Large-Scale AI Clusters (¥400K), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
+<p><span class="style11">&bull; Making Model Training More Reliable in Large-Scale AI Clusters (¥400K), funded by Huawei Research Fund, Co-author and Key Member, 2024 - 2025  </span></p> 
 
 
 <p><span class="style11"> <strong> Completed </strong> </span></p>
